aligns error page additional suggestions left, while entire block remains centered. fixes #4572

--- a/web/site/errors.styl
+++ b/web/site/errors.styl
@@ -9,6 +9,8 @@
   @media screen and (max-width:grid-mobile-width)
     margin-left -5%
     margin-right -5%
+  .view-center-block
+    text-align left
   
 .error-view .col div:last-of-type
   border-bottom none
